--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -16,3 +16,4 @@ flarum-ext-guestengagement:
     maintitle: Change TITLE for the box
     maintitledesc: Here u can set the Title for the alert box located BETWEEN POSTS
     enablealbox: Enable/Disable Alert Box on Homepage
+    enablepostbox: Enable/Disable "Between Post" box
