--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -6,12 +6,12 @@ flarum-ext-guestengagement:
     uwillreceive: You will receive notifications, here or by email, when someone replies to you. You can also "Like" to show your appreciation.
     hellops: Hello! You seem to be interested in this post!
     whenucreateps: When you create an account, we will be able to remember exactly what you have read and you will receive
-    uwillreceiveps: notifications, here or by email, when someone replies to you. You can also "Like" to show your appreciation.
+    uwillreceiveps: Notifications, here or by email, when someone replies to you. You can also "Like" to show your appreciation.
   admin:
     afterxpost: Display an alert box After X post
-    afterxpostdesc: accept number, default is 0 (box will be displayed on top of post streams)
+    afterxpostdesc: Accept number, default is 0 (box will be displayed on top of post streams)
     autohide: Auto hide box after X seconds
-    autohidedesc: use millisecond, e.g for 5 sec use 5000
+    autohidedesc: Use millisecond, e.g for 5 sec use 5000
     changetextbox: Change text for the box
     changetextboxdesc: Here u can set the text for the alert box located BETWEEN POSTS
     maintitle: Change TITLE for the box
