--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -1,20 +1,22 @@
 flarum-ext-guestengagement:
-  forum:
-    signupbtn: Signup
-    hello: Hello! You seem to be interested in this forum, but you haven't registered an account yet.
-    whenucreate: When you create an account, we will be able to remember exactly what you have read, so you can pick up exactly where you left off.
-    uwillreceive: You will receive notifications, here or by email, when someone replies to you. You can also "Like" to show your appreciation.
-    hellops: Hello! You seem to be interested in this post!
-    whenucreateps: When you create an account, we will be able to remember exactly what you have read and you will receive
-    uwillreceiveps: Notifications, here or by email, when someone replies to you. You can also "Like" to show your appreciation.
   admin:
     afterxpost: Display an alert box After X post
     afterxpostdesc: Accept number, default is 0 (box will be displayed on top of post streams)
     autohide: Auto hide box after X seconds
     autohidedesc: Use millisecond, e.g for 5 sec use 5000
+    backgroundColor: Backgroundcolor
+    backgroundColordesc: Chance Backgroundcolor
     changetextbox: Change text for the box
     changetextboxdesc: Here u can set the text for the alert box located BETWEEN POSTS
-    maintitle: Change TITLE for the box
-    maintitledesc: Here u can set the Title for the alert box located BETWEEN POSTS
     enablealbox: Enable/Disable Alert Box on Homepage
     enablepostbox: Enable/Disable "Between Post" box
+    maintitle: Change TITLE for the box
+    maintitledesc: Here u can set the Title for the alert box located BETWEEN POSTS
+  forum:
+    hello: Hello! You seem to be interested in this forum, but you haven't registered an account yet.
+    hellops: Hello! You seem to be interested in this post!
+    signupbtn: Signup
+    uwillreceive: You will receive notifications, here or by email, when someone replies to you. You can also "Like" to show your appreciation.
+    uwillreceiveps: Notifications, here or by email, when someone replies to you. You can also "Like" to show your appreciation.
+    whenucreate: When you create an account, we will be able to remember exactly what you have read, so you can pick up exactly where you left off.
+    whenucreateps: When you create an account, we will be able to remember exactly what you have read and you will receive
